--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -5,7 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
-		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="../../images/home/classic-nee-tacademy-logo.png"
+			type="image/x-icon"
+		/>
 		<link rel="stylesheet" href="../../stylesheets/admin.css" />
 		<link rel="stylesheet" href="../../stylesheets/pagination.css" />
 
@@ -18,9 +22,13 @@
 	</head>
 	<body>
 		<div class="previewTopper">
-			<span class="closesvg" style="z-index: 10; height: 100px;width: 200px; right: 20%; top: 8%;">
+			<span
+				class="closesvg"
+				style="z-index: 10; height: 100px; width: 200px; right: 20%; top: 8%"
+			>
 				<img
-				style="z-index: 10;" src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
+					style="z-index: 10"
+					src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/>
 				<h5 class="closeText">Close</h5>
 			</span>
@@ -150,7 +158,14 @@
 						<% } %>
 						<button
 							type="button"
-							class="btn btn-outline-danger submit ms-5 px-3 submitbtn warningcheck"
+							class="
+								btn btn-outline-danger
+								submit
+								ms-5
+								px-3
+								submitbtn
+								warningcheck
+							"
 						>
 							Delete
 						</button>
