--- a/views/results.ejs
+++ b/views/results.ejs
@@ -48,7 +48,7 @@
 
 		<section class="section2">
 			<select
-				class="form-select form-select-lg mb-3 dropdown"
+				class="form-select form-select-lg mb-3 dropdown1"
 				aria-label=".form-select-lg example"
 				data-select=""
 			>
