--- a/views/admin/branch/salem.ejs
+++ b/views/admin/branch/salem.ejs
@@ -5,7 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
-		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="../../images/home/classic-nee-tacademy-logo.png"
+			type="image/x-icon"
+		/>
 		<link rel="stylesheet" href="../../stylesheets/sliderrevolution.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -16,9 +20,13 @@
 	</head>
 	<body>
 		<div class="preview">
-			<span class="closesvg" style="z-index: 10; height: 100px;width: 200px; right: 18%; top: 7%;">
+			<span
+				class="closesvg"
+				style="z-index: 10; height: 100px; width: 200px; right: 18%; top: 7%"
+			>
 				<img
-				style="z-index: 10;" src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
+					style="z-index: 10"
+					src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/>
 				<h5 class="closeText">Close</h5>
 			</span>
@@ -28,8 +36,7 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<form
-					action="
-					/admin/branch/salem"
+					action="/admin/branch/salem"
 					method="post"
 					class="imgform"
 					enctype="multipart/form-data"
