--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -1,11 +1,10 @@
 .dropdown1 {
-	width: 10%;
-	height: 40px;
+	padding: 0.5rem 1rem;
 	cursor: pointer;
 	border-radius: 10px;
 	position: relative;
-	background: linear-gradient(#ffafbd, #ffc3a0);  
-	
+	background: linear-gradient(#ffafbd, #ffc3a0);
+
 	color: #000000;
 	text-align: center;
 	font-size: 16px;
@@ -13,7 +12,6 @@
 	margin: 2rem 0rem;
 	left: 50%;
 	transform: translateX(-50%);
-	
 }
 
 .arrowRight {
@@ -34,13 +32,10 @@
 }
 .btnItem {
 	height: 50px;
-	
 }
 .btnItem2 {
 	height: 50px;
 	transform: rotate(180deg);
-	
-
 }
 
 .swiper {
@@ -70,8 +65,6 @@ body.dark .chat {
 
 	width: 100%;
 	margin-bottom: 2rem;
-
-	
 }
 
 .gridcontainer {
@@ -85,35 +78,32 @@ body.dark .chat {
 	justify-items: center;
 	grid-row-gap: 5rem;
 	align-items: center;
-
 }
 .imgDesign {
 	background: url(../images/Result/des2.png) center/cover;
 	width: 100%;
 	height: 65%;
-	right:2%;
+	right: 2%;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	position: relative;
-	
 }
 .imgDesign img {
-	width:60%;
+	width: 60%;
 	height: 70%;
 	border-radius: 50%;
 	left: 22%;
 
 	top: 18%;
 	position: absolute;
-
 }
 .gridbox {
 	position: relative;
 	height: 24rem;
-	width:18rem;
+	width: 18rem;
 
 	border-radius: 10px;
 	display: flex;
@@ -121,18 +111,12 @@ body.dark .chat {
 	align-items: center;
 	justify-content: flex-start;
 
-	background-color:#69DADB;
-
-	
+	background-color: #69dadb;
 }
 
-
-
-
-
-.swiper-horizontal>.swiper-scrollbar {
+.swiper-horizontal > .swiper-scrollbar {
 	display: none;
- }
+}
 
 .refbox {
 	display: none;
@@ -148,7 +132,7 @@ body.dark .chat {
 .gridbox > span > p {
 	color: black;
 	font-size: 1.3rem;
-	padding-bottom: .5rem;
+	padding-bottom: 0.5rem;
 	text-align: center;
 }
 .gridbox > span > h3 {
@@ -156,7 +140,7 @@ body.dark .chat {
 	text-align: center;
 	font-weight: 600;
 	color: rgb(0, 0, 0);
-	padding: .5rem;
+	padding: 0.5rem;
 }
 
 body.dark .gridbox > span > h3 {
@@ -176,8 +160,6 @@ body.dark .gridbox > span > h3 {
 	width: fit-content;
 	margin-left: auto;
 	margin-right: auto;
-	
-
 }
 .pagination li {
 	display: inline-block;
@@ -195,7 +177,6 @@ body.dark .gridbox > span > h3 {
 	margin-right: auto;
 	width: fit-content;
 	position: relative;
-	
 }
 .pagination li a {
 	color: white;
@@ -263,11 +244,11 @@ body.dark .gridbox > span > h3 {
 	}
 }
 @media (max-width: 1000px) {
-	.arrowLeft , .arrowRight {
+	.arrowLeft,
+	.arrowRight {
 		display: none;
 	}
 }
-	
 
 @media (max-width: 800px) {
 	.dropdown {
@@ -277,22 +258,20 @@ body.dark .gridbox > span > h3 {
 		height: 70vh;
 	}
 	.swiper-slide img {
-		
 		width: 100%;
 		height: 100%;
 	}
 	.gridcontainer {
-		
 		grid-row-gap: 2rem;
 	}
 }
-@media (max-width:700px) {
+@media (max-width: 700px) {
 	.swiper {
 		height: 60vh;
 	}
 	.gridbox {
 		height: 18rem;
-		width:14rem;	
+		width: 14rem;
 	}
 	.gridbox > span > h3 {
 		font-size: 1rem;
@@ -302,7 +281,6 @@ body.dark .gridbox > span > h3 {
 	}
 }
 @media (max-width: 600px) {
-	
 	.swiper {
 		height: 40vh;
 	}
@@ -314,17 +292,16 @@ body.dark .gridbox > span > h3 {
 	}
 	.gridbox {
 		height: 15rem;
-		width:11rem;	
+		width: 11rem;
 	}
 	.gridbox > span > h3 {
 		font-size: 0.8rem;
-		padding: .3rem;
+		padding: 0.3rem;
 	}
 	.gridbox > span > p {
 		font-size: 0.8rem;
-		padding: .3rem;
+		padding: 0.3rem;
 	}
-	
 }
 @media (max-width: 450px) {
 	.swiper {
@@ -332,7 +309,7 @@ body.dark .gridbox > span > h3 {
 	}
 	.gridbox {
 		height: 14rem;
-		width:10rem;	
+		width: 10rem;
 	}
 }
 @media (max-width: 400px) {
@@ -341,7 +318,7 @@ body.dark .gridbox > span > h3 {
 	}
 	.gridbox {
 		height: 12rem;
-		width:8rem;	
+		width: 8rem;
 	}
 	.gridbox > span > h3 {
 		font-size: 0.7rem;
@@ -349,7 +326,4 @@ body.dark .gridbox > span > h3 {
 	.gridbox > span > p {
 		font-size: 0.7rem;
 	}
-	
 }
-
-
