--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -58,7 +58,8 @@ a.site-logo {
 }
 .site-navbar ul li a {
 	color: #1e2886;
-	padding: 0;
+	padding: 1rem 1.5rem;
+	text-align: center;
 	display: block;
 	font-size: 1rem;
 	text-decoration: none;
@@ -138,14 +139,14 @@ a.site-logo {
 	font-size: 18px;
 }
 /* dropdown */
-.menu{
+.menu {
 	position: relative;
 	display: inline-block;
 }
-.submenu{
-	height:fit-content;
+.submenu {
+	height: fit-content;
 	width: 500px;
-	
+
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
@@ -154,16 +155,16 @@ a.site-logo {
 	background: #fff;
 	color: #000;
 }
-body.dark .submenu{
+body.dark .submenu {
 	background: #000;
 	color: #fff;
 }
 
-.none{
+.none {
 	display: none !important;
 }
 
-.mobile{
+.mobile {
 	height: 70%;
 	width: 100%;
 	display: flex;
